# CursorInfo

CursorInfo/: ContentView.swift  CursorInfoApp.swift  SKPlugin.swift  SourceKitResponseView.swift  Theme.swift  XML.swift
CursorInfo.xcodeproj/: project.pbxproj
CursorInfo.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
CursorInfo.xcodeproj/xcuserdata/yume.xcuserdatad/xcschemes/: xcschememanagement.plist
SPM/: Package.resolved  Package.swift
SPM/Sources/CursorInfo/: Client.swift  CursorInfo.swift
SPM/Sources/Demangle/: Command.swift
temp/: SourceKitResponseViewV1.swift
vscode-lite/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
vscode-lite/scripts/: generate-icon.swift  prepare-binaries.sh
vscode-lite/src/: main.ts  styles.css  vite-env.d.ts
vscode-lite/src-tauri/: Cargo.toml  tauri.conf.json
vscode-lite/src-tauri/icons/: icon.icns
vscode-lite/src-tauri/src/: main.rs
vscode-lite/src-tauri/swift/: cursor_handler.swift
